app/assets/stylesheets/partials/_user.scss
// A <div> used to display user information. Contains <ul.info> with <li> elements for each peice of data.
//
// .with-avatar   - Organizes the information so it is to the right of an <img.avatar>
//
// Styleguide 2.2.0
div.user-details {
  ul.info {
    margin-bottom: 0;
    li {
      padding-bottom: rem-calc(5);
    }
  }
  &.with-avatar {
    img.avatar {
      margin-right: rem-calc(10);
      float: left;
    }
  }
}


// A <header> used to provide a unique callout for content. Great for user profiles.
//
// Styleguide 2.2.1
header.user-heading {
  height: rem-calc(380);
  margin-bottom: rem-calc(60);

  img { 
    @media #{$xlarge-up} {
      top: -250px !important;
    }
  }

  section.row.inner {
    position: relative;
    height: 100%;

    article.user-info {
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
      background: #f7f7f7;
      padding: 25px;
      padding-bottom: 0;
      position: absolute;
      height: rem-calc(150);
      bottom: -85px;
    }
  }
}

